# cognanobrain

./: NPU.md  Nanobrain-the-Making-of-an-Artificial-Brain-From-a-Time-Crystal-CRC-Press-2020-compressed-part-1.rtf  PROGRESS.md  README.md  TODO.md  elediff81.md  package-lock.json  package.json
.br/brain/220395e3-2eb8-4e16-93e3-1c22ee0ff2aa/: implementation_plan.md.metadata.json  implementation_plan.md.resolved.0  task.md.metadata.json  task.md.resolved.0  task.md.resolved.1  task.md.resolved.2  task.md.resolved.3  task.md.resolved.4  task.md.resolved.5  walkthrough.md.metadata.json  walkthrough.md.resolved  walkthrough.md.resolved.0
.br/brain/297a7807-cb87-4aa5-aa78-659b22f150b4/: implementation_plan.md  implementation_plan.md.metadata.json  implementation_plan.md.resolved.0  task.md  task.md.metadata.json  task.md.resolved  task.md.resolved.0  task.md.resolved.1  task.md.resolved.2  walkthrough.md  walkthrough.md.metadata.json  walkthrough.md.resolved  walkthrough.md.resolved.0
.br/brain/554f9b84-ec30-46d8-96bc-535c5a1448cd/: implementation_plan.md  implementation_plan.md.metadata.json  implementation_plan.md.resolved.0  task.md  task.md.metadata.json  task.md.resolved  task.md.resolved.0  walkthrough.md.metadata.json  walkthrough.md.resolved.0
.br/brain/64fa64bb-cb78-46a6-b179-97a5996aadfe/: implementation_plan.md  implementation_plan.md.metadata.json  implementation_plan.md.resolved  implementation_plan.md.resolved.0  task.md  task.md.metadata.json  task.md.resolved.0  task.md.resolved.1  task.md.resolved.2  task.md.resolved.3  walkthrough.md  walkthrough.md.metadata.json  walkthrough.md.resolved.0  walkthrough.md.resolved.1
.br/brain/66fbcf1a-5f3b-4e76-8a76-c6445af4a692/: implementation_plan.md  implementation_plan.md.metadata.json  implementation_plan.md.resolved.0  task.md  task.md.metadata.json  task.md.resolved.0  task.md.resolved.1  task.md.resolved.2  task.md.resolved.3  walkthrough.md.metadata.json  walkthrough.md.resolved.0
.br/brain/979b55bf-3d85-4d77-945a-c60e3145f715/: implementation_plan.md  implementation_plan.md.metadata.json  implementation_plan.md.resolved.0  implementation_plan.md.resolved.1  task.md  task.md.metadata.json  task.md.resolved.0  task.md.resolved.1  task.md.resolved.2  task.md.resolved.3
.br/brain/c824c6d0-a1b2-4dd1-a913-0b461c2be2d9/: implementation_plan.md  implementation_plan.md.metadata.json  implementation_plan.md.resolved  task.md.metadata.json  task.md.resolved.0  task.md.resolved.1  task.md.resolved.2  (+2 more)
.github/agents/: my-nano-agent.md
.github/workflows/: nanobrain-journey.yml
development/: PROGRESS.md  WALKTHROUGH.md  plan_ch03_ppm.md  session_task_ch07.md  session_walkthrough_ch07.md  task_ch03.md
development/plans/: ch01_development_framework.md  ch02_fractal_tape_gml.md  ch03_phase_prime_metric.md  ch04_fractal_mechanics.md  ch05_implementation_plan.md  ch05_task.md  ch05_universal_time_crystal.md  ch06_implementation_plan.md  ch06_singularity_geometry.md  ch06_task.md  ch07_integrated_brain_model.md  ch08_hinductor_magnetic_light.md  ch09_brain_jelly_avatar.md  ch10_consciousness.md  ch10_uploading_consciousness.md  phase3_task.md  plan_ch08.md
development/tasks/: ch02_fractal_tape_gml.md  ch03_phase_prime_metric.md  ch04_fractal_mechanics.md  ch05_universal_time_crystal.md  ch06_singularity_geometry.md  ch07_integrated_brain_model.md  ch08_hinductor_magnetic_light.md  ch09_brain_jelly_avatar.md  ch10_uploading_consciousness.md  task_ch08.md  task_ch09.md  task_ch10.md
development/walkthroughs/: ch01_philosophical_transformation.md  ch02_fractal_tape_gml.md  ch03_phase_prime_metric.md  ch03_ppm.md  ch04_fractal_mechanics.md  ch05_universal_time_crystal.md  ch06_singularity_geometry.md  ch08_hinductor_magnetic_light.md  ch09_brain_jelly_avatar.md  ch10_uploading_consciousness.md  phase3_platform_extensions.md
docs/: CHAPTER_1_IMPLEMENTATION.md  CHAPTER_1_SUMMARY.md  CHAPTER_1_TESTING.md  CHAPTER_4_COMPLETE.md
python/: CMakeLists.txt  README.md  bindings.cpp  pyproject.toml  setup.py
python/examples/: quickstart.py
python/nanobrain/: __init__.py  types.py
python/tests/: test_nanobrain.py
src/: App.tsx
src/components/: FractalInformationPanel.tsx  FundamentalFeaturesPanel.tsx  GgmlTensorDemo.tsx  HypergraphVisualization.tsx  OpenCogNanoBrainVisualization.tsx  PhilosophicalFramework.tsx  RelevanceRealizationPanel.tsx  UniversalKernelGeneratorPanel.tsx
src/core/: AtomSpaceTensorEncoder.ts  AttentionAllocationEngine.ts  CognitiveKernelTestSuite.ts  MetaCognitiveFeedbackEngine.ts  OpenCogNanoBrainKernel.ts  OpenCogNanoBrainTestSuite.ts  QuantumChangeGateway.ts  RecursiveReasoningEngine.ts  RelevanceCrystalPrimitive.ts  RelevanceRealizationEngine.ts  RelevanceRealizationSystem.ts  SelfDeceptionDetector.ts  ThreeOrdersCoherenceMonitor.ts  TimeCrystalSalienceLandscape.ts  UnifiedCognitiveKernel.ts  UniversalKernelGenerator.ts  UniversalKernelGeneratorTestSuite.ts
src/cpp/: CMakeLists.txt  CMakeLists.wasm.txt  DEVELOPMENT_FRAMEWORK.md  README.md  brain_jelly_demo.cpp  consciousness_demo.cpp  fractal_demo.cpp  gog_demo.cpp  main.cpp  nanobrain_atomese.cpp  nanobrain_atomese.h  nanobrain_attention.cpp  nanobrain_attention.h  nanobrain_brain_jelly.cpp  nanobrain_brain_jelly.h  nanobrain_brain_model.cpp  nanobrain_brain_model.h  nanobrain_consciousness.cpp  nanobrain_consciousness.h  nanobrain_dodecanion.cpp  nanobrain_dodecanion.h  nanobrain_encoder.cpp  nanobrain_encoder.h  nanobrain_encoder_full.cpp  nanobrain_encoder_full.h  nanobrain_fractal.cpp  nanobrain_fractal.h  nanobrain_fractal_tape.cpp  nanobrain_fractal_tape.h  nanobrain_gog.cpp  nanobrain_gog.h  nanobrain_hardware_sim.cpp  nanobrain_hardware_sim.h  nanobrain_hinductor.cpp  nanobrain_hinductor.h  nanobrain_kernel.cpp  nanobrain_kernel.h  nanobrain_llm_bridge.cpp  nanobrain_llm_bridge.h  nanobrain_metacognitive.cpp  (+41 more)
src/cpp/wasm/: README.md  index.html
src/hooks/: useCognitiveEngine.ts  useCognitiveKernel.ts  useEnhancedAtomSpace.ts  useFundamentalFeatures.ts  useOpenCogNanoBrain.ts  usePhasePrimeMetrics.ts
src/types/: index.ts
(+73 files in other folders)
