[build-system]
requires = ["setuptools>=45", "wheel", "pybind11>=2.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nanobrain"
version = "1.0.0"
description = "Python bindings for NanoBrain cognitive architecture"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "NanoBrain Team"}]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["cognitive architecture", "neural-symbolic", "time crystal", "ppm"]
dependencies = [
    "numpy>=1.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "pybind11>=2.6.0",
]

[project.urls]
Homepage = "https://github.com/nanobrain/nanobrain"
Documentation = "https://nanobrain.readthedocs.io"
Repository = "https://github.com/nanobrain/nanobrain"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
